--- a/frontend/src/app/components/claims/create-claim/contract-ou/contract-ou.component.html
+++ b/frontend/src/app/components/claims/create-claim/contract-ou/contract-ou.component.html
@@ -95,9 +95,10 @@
           <button type="button" class="btn btn-light" (click)="cancel()">Отменить</button>
         </div>
       </div>
+      <div class="root">
+        <iframe id="pdfIframe"  type="application/pdf" height="100vh" width="100%" frameBorder="0"></iframe>
+      </div>
     </div>
   </div>
 </div>
-<!--<div class="root" *ngIf="isShowPdf">-->
-<!--  <iframe id="pdfIrame" height="100%" width="100%" frameBorder="0"></iframe>-->
-<!--</div>-->
+
