--- a/frontend/src/app/components/board/board.component.html
+++ b/frontend/src/app/components/board/board.component.html
@@ -17,7 +17,7 @@
       <li class="nav-item">
         <a class="nav-link" [ngClass]="activeTab == 3 ? 'active' : ''" id="home-tab" data-toggle="tab" href="#home"
            role="tab" aria-controls="home"
-           aria-selected="true" (click)="sortStatusesDic(3)" translate>board.commonBoard</a>
+           aria-selected="true" (click)="sortStatusesDic(3);" translate>board.commonBoard</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [ngClass]="activeTab == 2 ? 'active' : ''" id="profile-tab" data-toggle="tab"
