--- a/frontend/src/app/components/claims/create-claim/contract-ou/contract-ou.component.html
+++ b/frontend/src/app/components/claims/create-claim/contract-ou/contract-ou.component.html
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-sm">
             <div class="form-group row">
-              <label class="col-sm-4 col-form-label">Номер договора
+              <label class="col-sm-5 col-form-label">Номер договора
                 <span class="text-danger">&nbsp;*</span>
               </label>
               <div class="col-sm-7">
@@ -53,10 +53,10 @@
         <div class="row">
           <div class="col-sm">
             <div class="form-group row">
-              <label class="col-sm-6 col-form-label">Срок действия договора
+              <label class="col-sm-5 col-form-label">Срок действия договора
                 <span class="text-danger">&nbsp;*</span>
               </label>
-              <div class="col-sm-6">
+              <div class="col-sm-7">
                 <input
                   type="text"
                   placeholder="dd.MM.yyyy"
@@ -89,10 +89,11 @@
       </form>
       <div>
         <div class="actions mb-3">
-          <button type="button" class="btn btn-primary" (click)="generateContract()">Сформировать договор</button>
-          <button type="button" class="btn btn-light" (click)="skipStep()" [disabled]="isDisabled">Пропустить шаг</button>
+          <button type="button" class="btn btn-sm btn2 btn-secondary" (click)="backToPrev()" *ngIf="fromBoard">Назад</button>
+          <button type="button" class="btn btn-sm btn2 btn-primary" (click)="generateContract()">Сформировать договор</button>
+          <button type="button" class="btn btn-sm btn2 btn-light" (click)="skipStep()" [disabled]="isDisabled">Пропустить шаг</button>
     <!--      <button type="button" class="btn btn-success" disabled>Распечатать</button>-->
-          <button type="button" class="btn btn-light" (click)="cancel()">Отменить</button>
+          <button type="button" class="btn btn-sm btn2 btn-light" (click)="cancel()" *ngIf="!fromBoard">Отменить</button>
         </div>
       </div>
     </div>
