--- a/frontend/src/app/components/board/add-event/add-event.component.html
+++ b/frontend/src/app/components/board/add-event/add-event.component.html
@@ -10,7 +10,9 @@
         <div class="row">
           <div class="col-sm">
             <label for="fillFromAndTo" translate>Дата и Время:</label>
-            <input type="text" id="fillFromAndTo" formControlName="eventDate" (ngModelChange)="setDateTime()" class="form-control" bsDatepicker #ru="bsDatepicker"/>
+            <input type="text" id="fillFromAndTo" formControlName="eventDate"
+                   [minDate]="today"
+                   (ngModelChange)="setDateTime()" class="form-control" bsDatepicker #ru="bsDatepicker"/>
 
           </div>
           <div class="col-sm">
