--- a/frontend/src/app/components/claims/create-claim/claim-events/claim-events.component.html
+++ b/frontend/src/app/components/claims/create-claim/claim-events/claim-events.component.html
@@ -29,7 +29,12 @@
       <div class="row">
         <div class="col-sm-3">
           <label for="fillFromAndTo">Дата и Время:</label>
-          <input type="text" id="fillFromAndTo" formControlName="eventDate" class="form-control" bsDatepicker
+          <input type="text"
+                 id="fillFromAndTo"
+                 formControlName="eventDate"
+                 class="form-control"
+                 bsDatepicker
+                 [minDate]="today"
                  #ru="bsDatepicker"/>
         </div>
         <div class="col-sm-2" style="margin-top: -26px;">
