--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <ul class="nav nav-tabs" id="myTab2" role="tablist">
-        <li class="nav-item" >
+        <li class="nav-item" *ngIf="false">
           <a class="nav-link " id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
              aria-selected="true">Мои клиенты</a>
         </li>
