--- a/frontend/src/app/components/board/board.component.html
+++ b/frontend/src/app/components/board/board.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="btn-group btn-breadcrumb">
       <a href="#" class="btn btn-primary"><i class="fa fa-home"></i></a>
-      <a class="btn btn-primary active">Панель управления</a>
+      <a class="btn btn-primary active" (click)="util.dnHrefParam('board', 3); refresh()">Панель управления</a>
     </div>
   </div>
 
