--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -412,7 +412,7 @@
                         </div>
                       </div>
                       <div class="row" *ngIf="!this.applicationId">
-                        <button class="btn btn2 btn-sm btn-link" type="button" (click)="clearClientInfo()">Очистить</button>
+                        <button class="btn btn2 btn-sm btn-link" type="button" (click)="clearApplicationFormClientData()">Очистить</button>
                       </div>
                     </div>
                   </div>
